--- a/src/components/profile/Profile.css
+++ b/src/components/profile/Profile.css
@@ -1,32 +1,53 @@
 .container { 
-    height: 200px;
+    height: 400px;
+    width: 400px;
     position: relative;
-    border: 3px solid white; 
-    display: flex;
+    display: block;
     justify-content: space-around;
 }
 
+.container img{
+    
+    border-radius: 5%;
+    border: 5px solid white;
+}
 .vertical-center {
     margin: 0;
-    position: absolute;
-    top: 50%;
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
+    position: relative;
+    left:2.5%;
+    width: 95%;
+    height:100%;
 }
 
 .profile-image {
-    transition: box-shadow 0.25s;
+    position: absolute;
+    top: 0%;
 }
 
-.profile-image:hover {
-    box-shadow: 2px 2px;
+.profile-bio {
+    color: white;
+    position: absolute;
+    float:left;
+    width: 100%;
+    margin-right:15px;
+    display:block;
+    line-height:3px;
+    bottom:0%;
+    align-items:flex-end;
+    margin: 0%;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+    
 }
 
 .profile-name {
     color: white;
+    margin: 0%;
+    padding: 0%;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
 .profile-cm {
     color: white;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
