--- a/src/components/profile/Profile.css
+++ b/src/components/profile/Profile.css
@@ -2,6 +2,8 @@
     height: 400px;
     width: 400px;
     position: relative;
+    top:50%;
+    margin:auto ;
     display: block;
     justify-content: space-around;
 }
