--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,11 @@
     padding:0;
     margin:0px;
   }
+
+*{
+  color:white;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
  
 @keyframes Gradient {
   0% {
